--- a/src/index.css
+++ b/src/index.css
@@ -91,7 +91,7 @@ main {
 
 /* Splitting the desktop */
 
-@media (700px < width < 800px){
+@media (max-width: 1000px) and (max-height: 1000px){
 	* {
 	 box-sizing: border-box;
 	}
@@ -121,7 +121,7 @@ main {
 /* Mobile Landscape Styles */
 
 
-@media (max-device-width: 4000px) and (orientation: landscape) {
+@media (max-width: 1024px) and (max-height: 600px) {
   * {
 	 box-sizing: border-box;
 	}
@@ -183,7 +183,7 @@ main {
 
 /* Mobile Portrait Styles */
 
-@media (max-device-width: 4000px) and (orientation: portrait) {
+@media (max-width: 480px) and (max-height: 1050px) {
   * {
 	 box-sizing: border-box;
 	}
