--- a/src/index.css
+++ b/src/index.css
@@ -1104,7 +1104,7 @@ main {
 
 
 /* Mobile Landscape */
-@media (max-width: 1024px) and (max-height: 600px) {
+@media (max-width: 1024px) and (max-height: 600px) and (orientation: portrait){
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
