--- a/src/index.css
+++ b/src/index.css
@@ -1206,6 +1206,7 @@ main {
         width: 22px; /* Sets the icon width */
         height: 22px; /* Maintains aspect ratio */
 		margin-left: 3px;
+		margin-bottom: 5px;
     }
   
     .download-btn, .do-it-again-btn, .pause-play-btn{
