--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,6 @@ main {
   background-color: #3d4e66; /* Changes background color on hover */
 }
 
-
 @keyframes slideDown {
   from {
     opacity: 0;
@@ -191,7 +190,7 @@ main {
 }
 
 .popup-content h3 {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 .close-popup {
@@ -413,9 +412,11 @@ main {
 }
 
 /* Button Styles */
-.download-btn, .do-it-again-btn, .pause-play-btn {
+.download-btn,
+.do-it-again-btn,
+.pause-play-btn {
   padding: 5px 10px;
-  width: 280px; 
+  width: 280px;
   background-color: #6c9dc6;
   color: white;
   border: none;
@@ -427,7 +428,9 @@ main {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.download-btn:hover, .do-it-again-btn:hover, .pause-play-btn:hover {
+.download-btn:hover,
+.do-it-again-btn:hover,
+.pause-play-btn:hover {
   background-color: #5a91bf;
   transform: translateY(-3px);
 }
@@ -489,8 +492,11 @@ main {
 }
 
 .footer-social a:hover img {
-  filter: brightness(0) saturate(100%) invert(72%) sepia(89%) saturate(292%) hue-rotate(360deg) brightness(104%) contrast(101%);
-  transform: translateY(-2px); /* Adds the same hover lift effect for the image */
+  filter: brightness(0) saturate(100%) invert(72%) sepia(89%) saturate(292%)
+    hue-rotate(360deg) brightness(104%) contrast(101%);
+  transform: translateY(
+    -2px
+  ); /* Adds the same hover lift effect for the image */
 }
 
 /* Contact Page General Styles */
@@ -614,6 +620,7 @@ main {
   margin-top: 60px; /* Adds space above the section */
   padding: 20px; /* Adds padding */
   background-color: #fff; /* White background */
+  margin-bottom: 50px; /* Adds space below the section */
 }
 
 .technologies h2 {
@@ -628,6 +635,7 @@ main {
   justify-content: space-around; /* Space between items */
   gap: 40px; /* Adds space between items */
   flex-wrap: wrap; /* Allows wrapping */
+  margin-bottom: 100px;
 }
 
 .tech-card {
@@ -751,7 +759,6 @@ main {
   color: #7f7f7f;
 }
 
-
 .team-row.three-members {
   justify-content: space-between; /* Space between the members */
 }
@@ -801,7 +808,7 @@ main {
   .menu-button {
     display: none; /* Hides the mobile menu button on large screens */
   }
-  
+
   .desktop-nav-links {
     display: flex; /* Show desktop navigation */
   }
@@ -809,8 +816,7 @@ main {
 }
 
 /* Split Desktop */
-@media (max-width: 1000px) and (max-height: 1000px) and (orientation: landscape){
-  
+@media (max-width: 1000px) and (max-height: 1000px) and (orientation: landscape) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -879,7 +885,7 @@ main {
   .nav-links ul li a:hover {
     background-color: #3d4e66; /* Changes the background color on hover */
   }
-  
+
   @keyframes slideDown {
     from {
       opacity: 0;
@@ -902,49 +908,47 @@ main {
     }
   }
 
-  
   * {
-	 box-sizing: border-box;
-	}
-	
-	body{
-	 background-color: #FFF8DC; /*Cornsilk*/
-	}
+    box-sizing: border-box;
+  }
 
-	/* Main Content Layout */
-	.content-container {
-	  width: auto;
-	  margin-left: 10px;
-	  
-	}
+  body {
+    background-color: #fff8dc; /*Cornsilk*/
+  }
 
-	.info-block {	
-	  padding: 40px;
-	}
+  /* Main Content Layout */
+  .content-container {
+    width: auto;
+    margin-left: 10px;
+  }
 
-	/* Right Column - Usage Instructions */
-	.usage-section {
-	  height: 360px;
-	  margin-right: 20px;
-	}
-	
-	.popup-content {
+  .info-block {
+    padding: 40px;
+  }
+
+  /* Right Column - Usage Instructions */
+  .usage-section {
+    height: 360px;
+    margin-right: 20px;
+  }
+
+  .popup-content {
     width: 700px;
     height: 300pt; /* Limits the height */
   }
-  
+
   .popup-content h3 {
-	font-size: 16px;
+    font-size: 16px;
   }
-  
+
   .close-popup {
-	right: 4px; /* Aligns it to the right */
-	font-size: 10px;
+    right: 4px; /* Aligns it to the right */
+    font-size: 10px;
   }
-  
+
   .upload-container {
-    width: 400px;  
-	height: 250px;
+    width: 400px;
+    height: 250px;
     padding: 1px; /* Reduces padding */
     margin: auto; /* Centers the container */
     font-size: 12px; /* Reduces font size */
@@ -952,43 +956,45 @@ main {
 
   .upload-btn {
     font-size: 14px; /* Reduces button font size */
-	margin: 18px; /* Adds margin around the button */
+    margin: 18px; /* Adds margin around the button */
     padding: 10px 20px; /* Adds padding inside the button */
   }
 
   .upload-dropzone {
     width: 320px; /* Limits dropzone width */
-	height: 80px;
+    height: 80px;
     margin-left: 40px; /* Adds margin on the left */
   }
 
   .upload-dropzone p {
     font-size: 16px; /* Reduces text size */
   }
-  
+
   .file-selected {
-	font-size: 16px; /* Sets the font size */
+    font-size: 16px; /* Sets the font size */
   }
-  
+
   .file-selected .remove-btn {
-   font-size: 16px; /* Sets the font size */
+    font-size: 16px; /* Sets the font size */
   }
 
   .summary-box {
-    height: 250px; 
-	width: 650px; 
-  }
-  
-  .download-btn, .do-it-again-btn, .pause-play-btn{
-	width: 210px; 
+    height: 250px;
+    width: 650px;
   }
 
-.about-page {
-  width: 90%; /* Ensures full width for mobile */
-}
+  .download-btn,
+  .do-it-again-btn,
+  .pause-play-btn {
+    width: 210px;
+  }
 
-.tech-card {
-	width: 90%;
+  .about-page {
+    width: 90%; /* Ensures full width for mobile */
+  }
+
+  .tech-card {
+    width: 90%;
     margin-bottom: 20px;
   }
 }
@@ -1066,9 +1072,9 @@ main {
   .nav-links ul li a:hover {
     background-color: #3d4e66; /* Changes the background color on hover */
   }
-  
+
   .title-card {
-	width: 200px; /* Sets the width of the logo */
+    width: 200px; /* Sets the width of the logo */
   }
 
   @keyframes slideDown {
@@ -1092,136 +1098,136 @@ main {
       transform: translateY(-20px); /* Slide 20px up */
     }
   }
-  
+
   * {
-	 box-sizing: border-box;
-	}
-	
-	body{
-	 background-color: #B0E0E6; /*PowderBlue */
-	}
-	
-	/* Welcome Section */
-	.welcome-section h1{
-	 font-size: 20px;
-	}
-	
-	/* Welcome Section */
-	.welcome-section p{
-	 font-size: 14px;
-	}
-
-	/* Main Content Layout */
-	.content-container {
-	  width: 200px;
-	  margin-bottom: 150px;
-	}
-
-	.info-block {
-	  margin-left: 20px;	
-	  padding: 40px;
-	}
-	
-	.info-block h4{
-	  font-size: 14px;
-	}
-	
-	.info-block p{
-	  font-size: 12px;
-	}
-	
-	.info-block a {
-      font-size: 12px;
-    }
-
-	/* Right Column - Usage Instructions */
-	.usage-section {
-	  padding: 20px;
-	  margin-left: 10px;
-	  height: 355px;
-	}
-	
-	.usage-section h3{
-	  font-size: 14px;
-	}
-	
-	.usage-section p{
-	  font-size: 12px;
-	}
-
-	.try-it-btn {
-	  padding: 10px 30px; /* Adds padding to the button */
-	  font-size: 14px;
-	}
-
-    .popup-content {
-       width: 380px; 
-    }
-  
-	.popup-content h3 {
-	   font-size: 10px;
-	}
-
-	.upload-container {
-	   width: 250px; /* Adjusts the container width */
-	   padding: 20px; /* Reduces padding for smaller screens */
-	}
-	  
-	  
-	.upload-btn {
-		font-size: 12px; /* Adjusts the font size */
-	}
-
-	.upload-dropzone p {
-	    font-size: 10px; /* Slightly reduces text size */
-	}
-	  
-	.file-selected {
-		font-size: 10px; /* Sets the font size */
-	}
-	  
-	.file-selected .remove-btn {
-	    font-size: 16px; /* Sets the font size */
-	}
-	
-	.summary-box {
-        width: 340px; 	
-	    height: 440px; 
-	    font-size: 14px;
-    }
-
-.download-btn, .do-it-again-btn, .pause-play-btn{
-	width: 100px; /* Full width buttons */
-	font-size: 10px;
-	margin-left: 5px;
+    box-sizing: border-box;
   }
-	
-.contact-page {
+
+  body {
+    background-color: #b0e0e6; /*PowderBlue */
+  }
+
+  /* Welcome Section */
+  .welcome-section h1 {
+    font-size: 20px;
+  }
+
+  /* Welcome Section */
+  .welcome-section p {
+    font-size: 14px;
+  }
+
+  /* Main Content Layout */
+  .content-container {
+    width: 200px;
+    margin-bottom: 150px;
+  }
+
+  .info-block {
+    margin-left: 20px;
+    padding: 40px;
+  }
+
+  .info-block h4 {
+    font-size: 14px;
+  }
+
+  .info-block p {
+    font-size: 12px;
+  }
+
+  .info-block a {
+    font-size: 12px;
+  }
+
+  /* Right Column - Usage Instructions */
+  .usage-section {
+    padding: 20px;
+    margin-left: 10px;
+    height: 355px;
+  }
+
+  .usage-section h3 {
+    font-size: 14px;
+  }
+
+  .usage-section p {
+    font-size: 12px;
+  }
+
+  .try-it-btn {
+    padding: 10px 30px; /* Adds padding to the button */
+    font-size: 14px;
+  }
+
+  .popup-content {
+    width: 380px;
+  }
+
+  .popup-content h3 {
+    font-size: 10px;
+  }
+
+  .upload-container {
+    width: 250px; /* Adjusts the container width */
+    padding: 20px; /* Reduces padding for smaller screens */
+  }
+
+  .upload-btn {
+    font-size: 12px; /* Adjusts the font size */
+  }
+
+  .upload-dropzone p {
+    font-size: 10px; /* Slightly reduces text size */
+  }
+
+  .file-selected {
+    font-size: 10px; /* Sets the font size */
+  }
+
+  .file-selected .remove-btn {
+    font-size: 16px; /* Sets the font size */
+  }
+
+  .summary-box {
+    width: 340px;
+    height: 440px;
+    font-size: 14px;
+  }
+
+  .download-btn,
+  .do-it-again-btn,
+  .pause-play-btn {
+    width: 100px; /* Full width buttons */
+    font-size: 10px;
+    margin-left: 5px;
+  }
+
+  .contact-page {
     margin-top: 52px;
-	max-height: 700px;
-	margin-bottom: 180px;
+    max-height: 700px;
+    margin-bottom: 180px;
   }
-.contact-form-container {
+  .contact-form-container {
+    width: 300px; /* Sets a max width */
+  }
 
-  width: 300px; /* Sets a max width */
-}
+  .contact-form input,
+  .contact-form textarea {
+    width: 90%; /* Full width inputs */
+  }
 
-.contact-form input,
-.contact-form textarea {
-  width: 90%; /* Full width inputs */
-}
-
-.contact-form button {
+  .contact-form button {
     padding: 10px 20px; /* Adds padding */
     font-size: 16px; /* Increases the font size */
     width: 90%; /* Makes the button full width */
     margin-top: 10px; /* Adds space above the button */
   }
-  
+
   .about-page {
-  padding: 30px 10px; /* Adds padding */
-  width: 90%; /* Ensures full width for mobile */
-}
+    padding: 30px 10px; /* Adds padding */
+    width: 90%; /* Ensures full width for mobile */
+  }
 
   /* Header and Titles */
   .about-company h1,
@@ -1231,7 +1237,7 @@ main {
     margin-bottom: 15px; /* Minimal space below titles */
   }
 
-   .about-description {
+  .about-description {
     font-size: 0.8rem; /* Reduces the font size */
     padding: 5px; /* Reduces padding */
     word-wrap: break-word; /* Ensures long words wrap */
@@ -1245,12 +1251,12 @@ main {
   }
 
   /* Team Member Section */
-  
-  .team-section{
-	margin-left: 3px;
-	width: 320px;
+
+  .team-section {
+    margin-left: 3px;
+    width: 320px;
   }
-  
+
   .team-member {
     height: 460px;
   }
@@ -1270,9 +1276,8 @@ main {
   }
 }
 
-
 /* Mobile Landscape */
-@media (max-width: 1024px) and (max-height: 600px) and (orientation: landscape){
+@media (max-width: 1024px) and (max-height: 600px) and (orientation: landscape) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
@@ -1344,9 +1349,9 @@ main {
   .nav-links ul li a:hover {
     background-color: #3d4e66; /* Changes the background color on hover */
   }
-  
+
   .title-card {
-	width: 200px; /* Sets the width of the logo */
+    width: 200px; /* Sets the width of the logo */
   }
 
   @keyframes slideDown {
@@ -1370,74 +1375,74 @@ main {
       transform: translateY(-20px); /* Slide 20px up */
     }
   }
-  
+
   * {
-	 box-sizing: border-box;
-	}
-	
-	body{
-	 background-color: #DDA0DD; /*Plum*/
-	}
+    box-sizing: border-box;
+  }
 
-	/* Welcome Section */
-	.welcome-section h1{
-	 font-size: 20px;
-	}
-	
-	/* Welcome Section */
-	.welcome-section p{
-	 font-size: 14px;
-	}
-	
-	.info-block h4{
-	  font-size: 14px;
-	}
-	
-	.info-block p{
-	  font-size: 12px;
-	}
-	
-	.info-block a {
-      font-size: 12px;
-    }
+  body {
+    background-color: #dda0dd; /*Plum*/
+  }
 
-	/* Right Column - Usage Instructions */
-	.usage-section {
-	  padding: 20px;
-	  margin-left: 10px;
-	  height: 298px;
-	}
-	
-	.usage-section h3{
-	  font-size: 14px;
-	}
-	
-	.usage-section p{
-	  font-size: 12px;
-	}
+  /* Welcome Section */
+  .welcome-section h1 {
+    font-size: 20px;
+  }
 
-	.try-it-btn {
-	  padding: 10px 30px; /* Adds padding to the button */
-	  font-size: 14px;
-	}
-	
-	.popup-content {
+  /* Welcome Section */
+  .welcome-section p {
+    font-size: 14px;
+  }
+
+  .info-block h4 {
+    font-size: 14px;
+  }
+
+  .info-block p {
+    font-size: 12px;
+  }
+
+  .info-block a {
+    font-size: 12px;
+  }
+
+  /* Right Column - Usage Instructions */
+  .usage-section {
+    padding: 20px;
+    margin-left: 10px;
+    height: 298px;
+  }
+
+  .usage-section h3 {
+    font-size: 14px;
+  }
+
+  .usage-section p {
+    font-size: 12px;
+  }
+
+  .try-it-btn {
+    padding: 10px 30px; /* Adds padding to the button */
+    font-size: 14px;
+  }
+
+  .popup-content {
     width: 660px;
-    height: 220px; 
+    height: 220px;
   }
-  
+
   .popup-content h3 {
-	font-size: 14px;
+    font-size: 14px;
   }
-  
+
   .close-popup {
-	right: 4px; /* Aligns it to the right */
-	font-size: 10px;
+    right: 4px; /* Aligns it to the right */
+    font-size: 10px;
   }
-  
+
   .upload-container {
-    width: 400px;  
-	height: 145px;
+    width: 400px;
+    height: 145px;
     padding: 1px; /* Reduces padding */
     margin: auto; /* Centers the container */
     font-size: 12px; /* Reduces font size */
@@ -1445,108 +1450,106 @@ main {
 
   .upload-btn {
     font-size: 12px; /* Reduces button font size */
-	margin: 8px; /* Adds margin around the button */
+    margin: 8px; /* Adds margin around the button */
     padding: 5px 15px; /* Adds padding inside the button */
   }
 
   .upload-dropzone {
     width: 320px; /* Limits dropzone width */
-	height: 60px;
+    height: 60px;
     margin-left: 40px; /* Adds margin on the left */
   }
 
   .upload-dropzone p {
     font-size: 12px; /* Reduces text size */
   }
-  
+
   .file-selected {
-	font-size: 12px; /* Sets the font size */
+    font-size: 12px; /* Sets the font size */
   }
-  
+
   .file-selected .remove-btn {
-   font-size: 12px; /* Sets the font size */
+    font-size: 12px; /* Sets the font size */
   }
-  
+
   .summary-box {
-    height: 80px; 
-	width: 590px; 
+    height: 80px;
+    width: 590px;
     font-size: 12px;
   }
-  
-  .download-btn, .do-it-again-btn, .pause-play-btn{
-	font-size: 10px;
-	width: 190px; /* Full width buttons */
+
+  .download-btn,
+  .do-it-again-btn,
+  .pause-play-btn {
+    font-size: 10px;
+    width: 190px; /* Full width buttons */
   }
-  
+
   .button-icon {
     margin-right: 10px; /* Adds space between the icon and text */
-	width: 25px; /* Sets the icon width */
+    width: 25px; /* Sets the icon width */
     height: 25px; /* Maintains aspect ratio */
   }
-  
-.contact-page {
+
+  .contact-page {
     margin-top: 52px;
-	height: 500px;
-	margin-bottom: 180px;
+    height: 500px;
+    margin-bottom: 180px;
   }
-.contact-form-container {
+  .contact-form-container {
+    width: 500px; /* Sets a max width */
+    height: 300px;
+  }
 
-  width: 500px; /* Sets a max width */
-  height: 300px;
-}
+  .contact-form input,
+  .contact-form textarea {
+    width: 90%; /* Full width inputs */
+  }
 
-.contact-form input,
-.contact-form textarea {
-  width: 90%; /* Full width inputs */
-}
-
-.contact-form button {
+  .contact-form button {
     padding: 10px 20px; /* Adds padding */
     font-size: 16px; /* Increases the font size */
     width: 90%; /* Makes the button full width */
     margin-top: 10px; /* Adds space above the button */
   }
 
-.about-page {
-  width: 90%; /* Ensures full width for mobile */
-}
+  .about-page {
+    width: 90%; /* Ensures full width for mobile */
+  }
 
-about-company h1,
+  about-company h1,
   .technologies h2,
   .meet-the-team h1 {
     font-size: 1.2rem; /* Further reduces title font size */
     margin-bottom: 15px; /* Minimal space below titles */
   }
   .about-description {
-   font-size: 0.8rem; /* Reduces the font size */
-   padding: 5px; /* Reduces padding */
-   word-wrap: break-word; /* Ensures long words wrap */
-   text-overflow: ellipsis; /* Adds ellipsis for overflow */
-   max-width: 100%; /* Ensures the content stays within the viewport */
+    font-size: 0.8rem; /* Reduces the font size */
+    padding: 5px; /* Reduces padding */
+    word-wrap: break-word; /* Ensures long words wrap */
+    text-overflow: ellipsis; /* Adds ellipsis for overflow */
+    max-width: 100%; /* Ensures the content stays within the viewport */
   }
-  
+
   .tech-card {
     width: 90%;
     margin-bottom: 20px;
   }
-  
+
   .team-member {
-	height: 350px;
+    height: 350px;
   }
-  
+
   .team-member img {
-   width: 100px;
-   height: 100px;
+    width: 100px;
+    height: 100px;
   }
 
   .team-member h4 {
     font-size: 0.75rem;
   }
-  
+
   .team-member p {
-	font-size: 0.75rem;
+    font-size: 0.75rem;
   }
-
-
-
 }
