--- a/src/index.css
+++ b/src/index.css
@@ -1147,6 +1147,11 @@ main {
   .popup-content h3 {
     font-size: 14px;
   }
+  
+   .close-popup {
+	right: 4px; /* Aligns it to the right */
+	font-size: 10px;
+  }
 
   .upload-container {
     width: 320px; /* Adjusts the container width */
