--- a/src/index.css
+++ b/src/index.css
@@ -796,7 +796,7 @@ main {
 }
 
 /* Split Desktop */
-@media (max-width: 1100px) and (max-height: 1000px) and (orientation: landscape) {
+@media (max-width: 1500px) and (max-height: 1500px) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
