--- a/src/index.css
+++ b/src/index.css
@@ -784,7 +784,7 @@ main {
 */
 
 /* Full Desktop */
-@media (min-width: 1291) {
+@media (min-width: 1291px) {
   .menu-button {
     display: none; /* Hides the mobile menu button on large screens */
   }
@@ -795,7 +795,7 @@ main {
 }
 
 /* Split Desktop */
-@media (max-width: 1500px) and (max-height: 1500px) {
+@media (max-width: 1530px) and (min-width: 600px) and (max-height: 700px) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
