--- a/src/index.css
+++ b/src/index.css
@@ -795,7 +795,7 @@ main {
 }
 
 /* Split Desktop */
-@media (max-width: 1000px) and (max-height: 1000px) and (orientation: landscape){
+@media (max-width: 1000px) and (max-height: 1000px) {
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
